force-app/main/default/objects/AcctPlanGroupProfile__c/AcctPlanGroupProfile__c.object-meta.xml
<CustomObject>
    <description>Account Plan Group Profile</description>
    <label>Account Plan Group Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlan Group Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Group Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>