force-app/main/default/objects/AcctPlanGroupProfile__c/fields/BargainingPowerOfBuyer__c.field-meta.xml
<CustomField>
    <fullName>BargainingPowerOfBuyer__c</fullName>
    <description>Buyers:  Bargaining  power of buyers</description>
    <inlineHelpText>Please select item : คือการให้เลือกระดับของอำนาจการต่อรองกับ Buyers</inlineHelpText>
    <label>Buyers: Bargaining power of buyers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium to high</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low to medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>