force-app/main/default/objects/AcctPlanGroupProfile__c/fields/BargainingPowerOfBuyerDescription__c.field-meta.xml
<CustomField>
    <fullName>BargainingPowerOfBuyerDescription__c</fullName>
    <description>Bargaining  power of buyers Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายเพื่อขยายความอำนาจการต่อรองของ Buyers ให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Bargaining  power of buyers Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>