force-app/main/default/objects/AcctPlanGroupProfile__c/fields/BargainingPowerOfSupplierDescription__c.field-meta.xml
<CustomField>
    <fullName>BargainingPowerOfSupplierDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายเพื่อขยายความอำนาจการต่อรองของ supplier ให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Bargaining power of supplier Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>