force-app/main/default/objects/AcctPlanGroupProfile__c/fields/BusinessFlow__c.field-meta.xml
<CustomField>
    <fullName>BusinessFlow__c</fullName>
    <description>Business Flow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ธุรกรรมภายในกลุ่ม ทั้งในส่วนของการซื้อและขายกันระหว่างกลุ่ม เพื่อดูว่าแต่ละกลุ่มมีความสัมพันธ์กันอย่างไรบ้าง มีรายการที่เกี่ยวข้องกันหรือไม่</inlineHelpText>
    <label>Group Transactional Flow / Business Flow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>