force-app/main/default/objects/AcctPlanGroupProfile__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <label>Completion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>