force-app/main/default/objects/AcctPlanGroupProfile__c/fields/FactorType1Description__c.field-meta.xml
<CustomField>
    <fullName>FactorType1Description__c</fullName>
    <description>Factor Type 1 Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การขยายความ key Success factor ที่ทำให้ธุรกิจประสบความสำเร็จ ซึ่งขึ้นอยู่กับการที่ RM วิเคราะห์และเลือกว่า กลุ่มบริษัทนั้นๆ มี key success factor อะไรบ้าง และเมื่อเลือกจาก drop down list แล้ว RM สามารถเขียนขยายความให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Factor Type 1 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>