force-app/main/default/objects/AcctPlanGroupProfile__c/fields/FinancialHighlight__c.field-meta.xml
<CustomField>
    <fullName>FinancialHighlight__c</fullName>
    <description>Financial Highlight</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ตัวเลขหลักทางการเงินของกลุ่ม เพื่อต้องการให้เห็นภาพรวมของ business performance ของกลุ่ม</inlineHelpText>
    <label>Financial Highlight (Consol.)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>