force-app/main/default/objects/AcctPlanGroupProfile__c/fields/FinancialHighlightByMajor__c.field-meta.xml
<CustomField>
    <fullName>FinancialHighlightByMajor__c</fullName>
    <description>Financial Highlight By Major</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ตัวเลขหลักทางการเงินของบริษัทที่สำคัญในกลุ่ม</inlineHelpText>
    <label>Financial Highlight (By Major Company)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>