force-app/main/default/objects/AcctPlanGroupProfile__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Group Master data</description>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Account Plan Group Profile</relationshipLabel>
    <relationshipName>AcctPlanGroup</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>