force-app/main/default/objects/AcctPlanGroupProfile__c/fields/Group_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Group_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>อุตสาหกรรมหลักของกลุ่ม</description>
    <inlineHelpText>อุตสาหกรรมหลักของกลุ่ม</inlineHelpText>
    <label>Group Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Account Plan Group Profile</relationshipLabel>
    <relationshipName>Account_Plan_Group_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>