force-app/main/default/objects/AcctPlanGroupProfile__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ชื่อ Decision Making group ซึ่งเป็นการตั้งจาก RM (ปัจจุบันไม่มี group ID)</inlineHelpText>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>