force-app/main/default/objects/AcctPlanGroupProfile__c/fields/GroupRevenue__c.field-meta.xml
<CustomField>
    <fullName>GroupRevenue__c</fullName>
    <description>Group Revenue</description>
    <inlineHelpText>Group&apos;s Revenue (Unit : THB)</inlineHelpText>
    <label>Group&apos;s Revenue (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>