force-app/main/default/objects/AcctPlanGroupProfile__c/fields/GroupStrategy__c.field-meta.xml
<CustomField>
    <fullName>GroupStrategy__c</fullName>
    <description>Group Strategy</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>กลยุทธ์ของกลุ่มบริษัทซึ่งเป็นการใส่แบบ free text</inlineHelpText>
    <label>Group Strategy (Optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>