force-app/main/default/objects/AcctPlanGroupProfile__c/fields/IndustryCompetition__c.field-meta.xml
<CustomField>
    <fullName>IndustryCompetition__c</fullName>
    <description>Industry Competition</description>
    <inlineHelpText>Please select item : คือความรุนแรงในการแข่งขันภายในอุตสาหกรรม</inlineHelpText>
    <label>Industry Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium to high</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low to medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>