force-app/main/default/objects/AcctPlanGroupProfile__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Company</inlineHelpText>
    <label>Parent Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>notEqual</operation>
            <value>Disqualified Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plan Group Profile</relationshipLabel>
    <relationshipName>Account_Plan_Group_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>