force-app/main/default/objects/AcctPlanGroupProfile__c/fields/Parent_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Parent_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>อุตสาหกรรมของบริษัทแม่</description>
    <inlineHelpText>อุตสาหกรรมของบริษัทแม่</inlineHelpText>
    <label>Parent Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Account Plan Group Profile (Parent Industry)</relationshipLabel>
    <relationshipName>Account_Plan_Group_Profile1</relationshipName>
    <type>Lookup</type>
</CustomField>