force-app/main/default/objects/AcctPlanGroupProfile__c/fields/ParentCompany__c.field-meta.xml
<CustomField>
    <fullName>ParentCompany__c</fullName>
    <description>Parent Company</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Parent Company</inlineHelpText>
    <label>Parent Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>