force-app/main/default/objects/AcctPlanGroupProfile__c/fields/ShareholdingStructure__c.field-meta.xml
<CustomField>
    <fullName>ShareholdingStructure__c</fullName>
    <description>Shareholding Structure</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Shareholding Structure (displayed as text and image)</inlineHelpText>
    <label>Shareholding Structure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>