force-app/main/default/objects/AcctPlanGroupProfile__c/fields/TargetByGroup__c.field-meta.xml
<CustomField>
    <fullName>TargetByGroup__c</fullName>
    <label>TargetByGroup</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>