force-app/main/default/objects/AcctPlanGroupProfile__c/fields/ThreatOfSubstituteProduct__c.field-meta.xml
<CustomField>
    <fullName>ThreatOfSubstituteProduct__c</fullName>
    <description>Threat of Substitute Product</description>
    <inlineHelpText>Please select item : คือระดับอุปสรรคในการหาสินค้าทดแทน</inlineHelpText>
    <label>Substitutes:Threat of substitute product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium to high</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low to medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>