force-app/main/default/objects/AcctPlanGroupProfile__c/fields/UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>UltimateParent__c</fullName>
    <description>Ultimate Parent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultimate Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>